--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </div>
     </section>
     <footer>
-        <div class="foot1">Mon petit graphisme-Agence d grphisme basée à Paris </div>
+        <div class="foot1">Mon petit graphisme-Agence de graphisme basée à Paris </div>
         <div class="foot2">
             <img src="https://img.icons8.com/ios-glyphs/30/000000/twitter--v1.png"/>
             <img src="https://img.icons8.com/ios-glyphs/30/000000/facebook-f.png"/>
