--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
                     <ul>
                         <li><a href="#"></a>Accueil</li>
                         <li><a href="#"></a>contact</li>
+                        <li><a href="#"></a>contact</li>
                     </ul>
                 </div>
             </div>
