noulle mise à jour 2

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
         </div>
     </section>
     <section class="section2">
-        <div class="contenu1">Mon petit graphisme est une agence de graphisme qui aide les entreprises
-            à créer des visuels attractifs 
+        <div class="wrapp">
+            <div class="contenu1">Mon petit graphisme est une agence de graphisme qui aide les entreprises
+                à créer des visuels attractifs 
+            </div>
         </div>
         <div class="contenu2">
             <div class="cards">
@@ -74,8 +76,8 @@
                 <div>Accès rapides </div>
                 <div>
                     <ul>
-                        <li><a href="#"></a>Accueil</li>
-                        <li><a href="#"></a>contact</li>
+                        <li><a href="#">Accueil</a></li>
+                        <li><a href="#">contact</a></li>
                     </ul>
                 </div>
             </div>
@@ -83,9 +85,9 @@
                 <div>A propos </div>
                 <div>
                     <ul>
-                        <li><a href="#"></a>Données personnelles</li>
-                        <li><a href="#"></a>Mentions légales</li>
-                        <li><a href="#"></a>Cookies</li>
+                        <li><a href="#">Données personnelles</a></li>
+                        <li><a href="#">Mentions légales</a></li>
+                        <li><a href="#">Cookies</a></li>
                     </ul>
                 </div>
             </div>
@@ -93,9 +95,9 @@
                 <div>Coordonnées </div>
                 <div>
                     <ul>
-                        <li><a href="#"></a>10 Quai de la charente</li>
-                        <li><a href="#"></a>75019 Paris</li>
-                        <li><a href="#"></a>01 23 45 67 89</li>
+                        <li><a href="#">10 Quai de la charente</a></li>
+                        <li><a href="#">75019 Paris</a></li>
+                        <li><a href="#">01 23 45 67 89</a></li>
                     </ul>
                 </div>
             </div>
